fix: correct dark mode prose styling toggle

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@ code {
   @apply font-mono!;
 }
 
-.ds-prose h1 {
+.prose h1 {
   @apply text-pretty;
 }
 
@@ -23,7 +23,6 @@ code {
 }
 
 @plugin "daisyui" {
-  prefix: 'ds-';
   themes: acid;
 }
 
@@ -48,10 +47,7 @@ code {
   --radius-box: 0.5rem;
 }
 
-@plugin "@tailwindcss/typography" {
-  /* prettier-ignore */
-  className: 'ds-prose';
-}
+@plugin "@tailwindcss/typography";
 
 @theme {
   --font-sans: 'Noto Sans SC', sans-serif;
